--- a/html/string.html
+++ b/html/string.html
@@ -1455,8 +1455,7 @@ true </pre><!-- wide-view -->
                     <details open><!--details CODE-->
                         <summary class="details-code-summary">[JavaScript Inserts]</summary>
                         <pre class="details-code-aclass">
-"hello".charCodeAt(1)
-  </pre><!-- code-content -->
+"hello".charCodeAt(1) </pre><!-- code-content -->
                     </details><!--details CODE-->
 
                     <br class="small-view">
@@ -1507,8 +1506,7 @@ true </pre><!-- wide-view -->
                         <pre class="details-code-aclass">
 let mystr = "hello"
 console.log(mystr.concat(" world"))
-console.log(mystr)
-</pre><!-- code-content -->
+console.log(mystr) </pre><!-- code-content -->
                     </details><!--details CODE-->
 
                     <br class="small-view
