update content in string_match.html

--- a/html/string_match.html
+++ b/html/string_match.html
@@ -86,7 +86,7 @@
                 <li>
                   an <strong>array</strong> whose contents depend on the presence or absence of the global (g) flag
                 <li>
-                  or code{null} if no matches are found
+                  or <code>null</code> if no matches are found
                 <li>
                   If the <strong>g</strong> flag is not used, only the first complete match and its related capturing
                   groups are returned
@@ -100,7 +100,7 @@
                   capturing groups are
                   not included
               </ol>
-            <li>If no match is found, Both <code>indexOf</code> and <code>search</code>return -1, whereas
+            <li>If no match is found, Both <code>indexOf</code> and <code>search</code> return -1, whereas
               <code>match</code> returns <code>null</code>
             <li><code>indexOf</code> for plain strings. <code>search</code> for regex, both return an index value or
               <code>-1</code> if no match
