--- a/html/isnan.html
+++ b/html/isnan.html
@@ -532,11 +532,11 @@ Number.isNaN(0/0)
             <pre class="details-console-aclass small-view">
 true
 true
-true </pre><!-- small-view -->
+NaN </pre><!-- small-view -->
             <pre class="details-console-aclass wide-view">
 true
 true
-true </pre><!-- wide-view -->
+NaN </pre><!-- wide-view -->
           </details><!--details CONSOLE -->
 
         </article>
