make minor correction (correct typo) in concat.html

--- a/html/concat.html
+++ b/html/concat.html
@@ -129,7 +129,7 @@ arr12</pre><!-- code-content -->
 const str1 = "hello"
 const str2 = " joe"
 const str_12 = str1.concat(str2)
-const str_alt_12 = "".concant(str1,str2)
+const str_alt_12 = "".concat(str1,str2)
 
 str1
 str2
