make minor corrections to use_strict.html

--- a/html/use_strict.html
+++ b/html/use_strict.html
@@ -134,6 +134,16 @@
                             class expressions
                     </ol>
                 </article>
+                <article>
+                    <h1 class="count">Comment</h1>
+                    <ol>
+                        <li><code>"use strict";</code> makes <code>this</code> default to <strong>undefined</strong> in
+                            functions (<em>not</em> the global object)
+
+                        <li><code>"use strict";</code> makes assignment to an undeclared variable a
+                            <strong>ReferenceError</strong></li>
+                    </ol>
+                </article>
 
                 <article>
                     <h1 class="count">Code Example</h1>
