correct minor typo (remove superfluous 'x') in parse_float.html

--- a/html/parse_float.html
+++ b/html/parse_float.html
@@ -138,7 +138,7 @@ parseFloat(string) </pre>
                         <li>
                             It parses characters until it hits something that isn't part of a valid number
                         <li>
-                            It returns <strong>a number</strong>x if parsing succeeds, otherwise NaN (Not a Number)
+                            It returns <strong>a number</strong> if parsing succeeds, otherwise NaN (Not a Number)
                     </ol>
                 </article>
 
